--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,31 @@ body {
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
-    width: 30%;
+    width: 20%;
     text-align: center;
     float: left;
-    font-size: 300%;
-    margin: 10px 0 0 40px;
+    font-size: 200%;
+    margin: 20px 0 0 40px;
     
+}
+
+#menu {
+    float: right;
+    margin: 80px 40px 0 0;
+    font-size: 120%;
+
+    
+}
+
+#menu a {
+    text-decoration: none;
+    
+    
+}
+
+#menu li {
+    list-style-type: none;
+    display: inline;
 }
 
 
