--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,40 +12,50 @@ body {
     color: #000000;
 }
 
-/* Headings and Navigation */
+/* Header and Navigation */
 
 #logo {
-    font-weight: 800;
-    font-size: xx-large;
+    font-size: 200%;
     color: #000000;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
-    width: 20%;
     text-align: center;
     float: left;
-    font-size: 200%;
-    margin: 20px 0 0 40px;
+    display: inline-block;
+    padding: 30px 0 0 50px;
+    width: 20%;
+    
     
 }
 
 #menu {
     float: right;
-    margin: 80px 40px 0 0;
     font-size: 120%;
+    display: inline-block;
+    width: 700px;
+    padding-top: 80px;
+    word-spacing: 20px;
+   
+}
 
+#menu, #logo {
     
 }
 
+
 #menu a {
     text-decoration: none;
-    
+    color: #000000;
     
 }
 
 #menu li {
     list-style-type: none;
     display: inline;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    
 }
 
 
