--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,52 +10,60 @@ body {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     color: #000000;
+    
 }
 
-/* Header and Navigation */
+
+/* Header */
+
+#header-dimensions {
+    height: 150px;
+    width: 100%;
+    background-color: burlywood;
+}
+
+#logo-block {
+    display: inline-block;
+    width: 25%;
+    height: 150px;
+}
+
+#middle-block {
+    display: inline-block;
+    width: 35%;
+    height: 150px;
+}
+
+#menu-block {
+    display: inline-block;
+    width: 35%;
+    height: 150px;
+    
+    
+}
 
 #logo {
-    font-size: 200%;
-    color: #000000;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    text-decoration: none;
     text-align: center;
-    float: left;
-    display: inline-block;
-    padding: 30px 0 0 50px;
-    width: 20%;
-    
-    
+    position: relative;
+    bottom: 50px;
 }
 
 #menu {
-    float: right;
-    font-size: 120%;
-    display: inline-block;
-    width: 700px;
-    padding-top: 80px;
-    word-spacing: 20px;
-   
-}
-
-#menu, #logo {
-    
-}
-
-
-#menu a {
     text-decoration: none;
-    color: #000000;
+    list-style: none;
+    font-size: large;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    position: relative;
+    bottom: 50px;
+    left: 50px;
+    
+    
     
 }
 
 #menu li {
-    list-style-type: none;
     display: inline;
-    letter-spacing: 3px;
-    text-transform: uppercase;
+    word-spacing: 4px;
     
 }
-
-
