--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,10 @@ body {
 /* Header */
 
 #header-properties {
-    height: 150px;
+    height: 100px;
     width: 100%;
-    background-image: url('../images/sky.png');
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #000000;
 }
 
 
@@ -37,7 +38,7 @@ body {
 
 #menu-block {
     display: inline-block;
-    width: 35%;
+    width: 30%;
     height: 150px;
     
     
@@ -48,7 +49,7 @@ body {
     text-transform: uppercase;
     text-align: center;
     position: relative;
-    bottom: 40px;
+    bottom: 70px;
 }
 
 #menu {
@@ -56,16 +57,17 @@ body {
     list-style: none;
     font-size: large;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     word-spacing: 10px;
     position: relative;
-    bottom: 30px;
-    left: 30px;
+    bottom: 60px;
+    left: 200px;
 }
 
 #menu li {
     display: inline;
-    word-spacing: 4px;
+    word-spacing: 10px;
+    
     
 }
 
@@ -77,3 +79,56 @@ body {
     border-bottom: 1px solid #000000;
 }
 
+
+
+/* Main photo and search bar */
+
+#main-properties {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    background-color: #FFFFFF;
+}
+
+#main-photo {
+    background-image: url('../images/sky.png');
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    position: absolute;
+}
+
+.search-bar { 
+    font-size: 120%;
+    font-family: inherit;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    background-color: rgba(57, 153, 255, 0.5);
+    
+      
+    
+    width: 35%;
+    height: 50px;
+    border: 1px solid rgba(57, 153, 255, 1);
+    padding: 10px;
+
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    
+} 
+
+.search-bar input {
+    width: 300px;
+}
+
+.search-bar button {
+    width: 100px;
+    background-color: #FFFFFF;
+}
+
+.search-bar button:hover {
+    background-color: rgba(57, 153, 255, 1);
+}
