--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,27 +17,35 @@ body {
     padding-left: 15px;
     margin-left: auto;
     margin-right: auto;
-    /* border: 2px solid #000000; */
+    border: 2px solid #000000;
   }
   
 
 
 /* Header */
 
+header {
+    border-bottom: 1px solid #000000;
+    position: relative;
+    top: 30px;
+}
+
 .logo {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    float: left;
     width: 25%;
+    margin-left: 1rem;
+    padding-top: 1rem;
 
 }
 
 .menu {
     float: right;
-    word-spacing: 5px;
+    word-spacing: 10px;
     position: relative;
-    top: 80px;
+    bottom: 40px;
+    
 
     
 }
@@ -82,33 +90,32 @@ body {
 
     .container {
         width: 90%;
-        /* border: 2px solid #000000; */
+        
     }
     
     .logo {
         font-size: large;
         text-align: center;
-        position: relative;
-        left: 20px;
-        top: 30px
-    
+        width: 50%;
+        /* border: 1px solid #000000; */
+        padding-bottom: 20px;
+        margin: 0;
+        
     }
 
     .menu {
-        width: 5rem;
-        padding-right: 1rem;
+        width: 15%;
+        padding-right: 2rem;
+        /* border: 1px solid #000000; */
+        position: relative;
+        bottom: 95px;
         
-        
-        
+       
     }
 
     .menu li {
         font-size: small;
-        position: relative;
-        bottom: 5rem;
-        line-height: 1.5rem;
-
-        
+        line-height: 1.5rem; 
     }
 
     #main-photo {
@@ -117,6 +124,29 @@ body {
     }
 }
 
+/* Footer */
+
+footer {
+    border-top: 1px solid #000000;
+    margin-top: 1rem;
+}
+
+.logo-small {
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    width: 10%;
+    margin-left: 1rem;
+    border: 1px solid #000000;
+    
+}
+
+.under-logo-text {
+    width: 10%;
+    text-align: center;
+    margin-left: 1rem;
+    border: 1px solid #000000;
+}
 
 
 
