--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ body {
     margin-right: auto;
     /* border: 2px solid #000000; */
   }
+
+  * {
+      box-sizing: border-box;
+  }
   
 
 
@@ -212,7 +216,36 @@ a:active {
     border-bottom: 1px solid;
 }
 
+/* Contact */
 
+ .contact-container { 
+    position: relative;
+    top: 3rem;
+    padding-bottom: 50px;
+    width: 60%;
+    margin: auto;
+} 
 
+#contact-header {
+    text-align: center;
+}
 
+#fname, #lname, #nationality, #subject {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc; 
+    border-radius: 4px;
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+    resize: vertical 
+  }
+
+  input[type=submit] {
+    background-color: #2b9eb3;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 
