--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,4 +268,6 @@ a:active {
       float: right;
       padding: 1rem 0.5rem 1rem 1rem;
       border: none;
+      width: 600px;
+      height: 300px;
   }
