--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,13 @@ body {
     margin-left: auto;
     margin-right: auto;
     /* border: 2px solid #000000; */
+    background-color:rgba(4, 160, 232, 0.2);
+    border-radius: 20px;
   }
 
   * {
       box-sizing: border-box;
   }
-  
 
 
 /* Header */
@@ -79,6 +80,7 @@ header {
     object-fit: fill;
     overflow: hidden;
     background-repeat: no-repeat;
+    border-radius: 20px;
 }
 
 /* Media */
@@ -125,7 +127,7 @@ header {
 
 footer {
     border-top: 1px solid #000000;
-    margin-top: 5rem;
+    margin-top: 7rem;
 }
 
 .logo-small {
@@ -260,12 +262,20 @@ a:active {
   }
 
   address {
-      width: 20%;
+      width: 25%;
       text-align: center;
       font-style: normal;
       margin-left: 50px;
       margin-top: 50px;
+      padding-bottom: 10px;
       display: inline-block;
+      /* border: 1px solid #000000; */
+      border-radius: 25px;
+      background-color:rgba(90, 134, 255, 0.3);
+  }
+
+  address p {
+      line-height: 5px;
   }
 
   #map {
