--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,24 +31,30 @@ body {
 
 header {
     border-bottom: 1px solid #000000;
-    position: relative;
-    top: 20px;
+    height: 100px;
+    margin-bottom: 20px;
 }
 
 .logo {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    width: 25%;
-    margin-left: 1rem;
+    width: 250px;
+    margin: 0;
+    position: relative;
+    top: 10px;
+    /* border: 1px solid #000000; */
 
 }
 
 .menu {
-    float: right;
     word-spacing: 10px;
+    text-align: end;
+    float: right;
+    /* border: 1px solid #000000; */
     position: relative;
-    bottom: 40px;
+    bottom: 30px;
+    padding-bottom: 0;
     
 
     
@@ -79,34 +85,41 @@ header {
     object-fit: fill;
     overflow: hidden;
     background-repeat: no-repeat;
+    background-position: center;
     border-radius: 20px;
 }
 
 /* Media */
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
 
     .container {
         width: 90%;
         
     }
+
+    header {
+        height: 100px;
+    }
     
     .logo {
-        font-size: large;
+        font-size: x-large;
         text-align: center;
-        width: 50%;
         /* border: 1px solid #000000; */
-        padding-bottom: 20px;
-        margin: 0;
+        padding: 0;
+        position: relative;
+        top: 20px;
+        right: 30px;
         
     }
 
     .menu {
-        width: 15%;
-        padding-right: 2rem;
+        width: 120px;
+        text-align: right;
         /* border: 1px solid #000000; */
         position: relative;
-        bottom: 95px;
+        bottom: 60px;
+        right: 10px;
         
        
     }
@@ -114,12 +127,37 @@ header {
     .menu li {
         font-size: small;
         line-height: 1.5rem; 
+    
     }
 
     #main-photo {
         background-position: center;
         
     }
+
+    #footerblock1 {
+        border: 1px solid #000000;
+        width: 150px;
+    }
+
+    .logo-small {
+        /* width: 200px; */
+        text-align: center;
+        border: 1px solid #000000;
+    }
+
+    .under-logo-text {
+        border: 1px solid #000000;
+    }
+    
+
+    #footerblock2 {
+        position: relative;
+        left: 60px;
+        /* border: 1px solid #000000; */
+        
+    }
+
 }
 
 /* Footer */
@@ -133,13 +171,14 @@ footer {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    width: 60%;
+    width: 65%;
     margin-left: 1rem;
     position: relative;
     top: 0.5rem;
-    /* border: 1px solid #000000; */
-    
+    /* border: 1px solid #000000;  */
 }
+    
+
 
 .under-logo-text {
     width: 60%;
@@ -151,7 +190,7 @@ footer {
 #footerblock1 {
     display: inline-block;
     /* border: 1px solid #000000; */
-    width: 20%;
+    /* width: 20%; */
 }
 
 #footerblock2 {
@@ -159,6 +198,9 @@ footer {
     float: right;
     clear: right;
     margin: 2rem 0;
+    position: relative;
+    left: 50px;
+    bottom: 10px;
     
 }
 
