--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,9 @@ body {
     border-radius: 20px;
   }
 
-  * {
-      box-sizing: border-box;
-  }
+  /* * { */
+      /* box-sizing: border-box; */
+  /* } */
 
   
 /* Header */
@@ -91,7 +91,7 @@ header {
 
 /* Media */
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
 
     .container {
         width: 90%;
@@ -133,32 +133,47 @@ header {
     #main-photo {
         background-position: center;
         
-    }
-
-    #footerblock1 {
-        border: 1px solid #000000;
-        width: 150px;
+        
     }
 
     .logo-small {
-        /* width: 200px; */
         text-align: center;
-        border: 1px solid #000000;
+        font-size: small;
+        
+        
     }
 
     .under-logo-text {
-        border: 1px solid #000000;
+        text-align: center;
+        font-size: x-small;
+    }
+
+    #footerblock1 {
+        max-width: 130px;
     }
     
 
     #footerblock2 {
-        position: relative;
-        left: 60px;
-        /* border: 1px solid #000000; */
+        font-size: x-small;
+        width: 40%;
+        outline: 2px solid green;
         
     }
 
+    td, th {
+        border: 1px solid blue;
+    }
+
+    
+
+    footer {
+        border-top: 1px solid #000000;
+    }
+
+
 }
+
+
 
 /* Footer */
 
@@ -197,10 +212,8 @@ footer {
     /* border: 1px solid #000000; */
     float: right;
     clear: right;
-    margin: 2rem 0;
-    position: relative;
-    left: 50px;
-    bottom: 10px;
+    margin: 20px 0;
+    
     
 }
 
@@ -334,3 +347,4 @@ a:active {
       overflow: hidden;
       /* border: 1px solid #000000; */
   }
+
