--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,11 +21,6 @@ body {
     background-color:rgba(54, 185, 245, 0.1);
     border-radius: 20px;
   }
-
-  /* * { */
-      /* box-sizing: border-box; */
-  /* } */
-
   
 /* Header */
 
@@ -74,8 +69,6 @@ header {
     border-bottom: 1px solid #000000;
 }
 
-
-
 /* Main photo */
 
 #main-photo {
@@ -88,92 +81,6 @@ header {
     background-position: center;
     border-radius: 20px;
 }
-
-/* Media */
-
-@media screen and (max-width: 600px) {
-
-    .container {
-        width: 90%;
-        
-    }
-
-    header {
-        height: 100px;
-    }
-    
-    .logo {
-        font-size: x-large;
-        text-align: center;
-        /* border: 1px solid #000000; */
-        padding: 0;
-        position: relative;
-        top: 20px;
-        right: 30px;
-        
-    }
-
-    .menu {
-        width: 120px;
-        text-align: right;
-        /* border: 1px solid #000000; */
-        position: relative;
-        bottom: 60px;
-        right: 10px;
-        
-       
-    }
-
-    .menu li {
-        font-size: small;
-        line-height: 1.5rem; 
-    
-    }
-
-    #main-photo {
-        background-position: center;
-        
-        
-    }
-
-    .logo-small {
-        text-align: center;
-        font-size: small;
-        
-        
-    }
-
-    .under-logo-text {
-        text-align: center;
-        font-size: x-small;
-    }
-
-    #footerblock1 {
-        max-width: 130px;
-    }
-    
-
-    #footerblock2 {
-        font-size: x-small;
-        width: 40%;
-        outline: 2px solid green;
-        
-    }
-
-    td, th {
-        border: 1px solid blue;
-    }
-
-    
-
-    footer {
-        border-top: 1px solid #000000;
-    }
-
-
-}
-
-
 
 /* Footer */
 
@@ -203,23 +110,24 @@ footer {
 }
 
 #footerblock1 {
-    display: inline-block;
+    float: left;
     /* border: 1px solid #000000; */
     /* width: 20%; */
 }
 
 #footerblock2 {
     /* border: 1px solid #000000; */
-    float: right;
-    clear: right;
     margin: 20px 0;
+    float: right;
+    overflow: hidden;
     
     
 }
 
-#footerblock2-uniqueforcontact {
-    position: relative;
-    bottom: 140px;
+footer {
+    /* outline: 2px solid green; */
+    overflow: hidden;
+    width: 100%;
 }
 
 table {
@@ -316,13 +224,14 @@ a:active {
       border-top: 1px solid #000000;
       margin-top: 20px;
       height: 300px;
+      /* outline: 2px solid green; */
   }
 
   address {
-      width: 25%;
+      width: 200px;
       text-align: center;
       font-style: normal;
-      margin-left: 100px;
+      margin-left: 20px;
       margin-top: 50px;
       position: relative;
       top: 30px;
@@ -339,12 +248,110 @@ a:active {
 
   #map {
       float: right;
-      padding: 1rem 0.5rem 1rem 1rem;
-      margin-top: 10px;
+      margin: 50px 50px 0 0;
       border: none;
-      width: 600px;
-      height: 300px;
+      width: 300px;
+      height: 200px;
       overflow: hidden;
       /* border: 1px solid #000000; */
   }
+
+  /* Media */
+
+@media screen and (max-width: 600px) {
+
+    .container {
+        width: 90%;
+        
+    }
+
+    header {
+        height: 100px;
+    }
+    
+    .logo {
+        font-size: x-large;
+        text-align: center;
+        /* border: 1px solid #000000; */
+        padding: 0;
+        position: relative;
+        top: 20px;
+        right: 30px;
+        
+    }
+
+    .menu {
+        width: 120px;
+        text-align: right;
+        /* border: 1px solid #000000; */
+        position: relative;
+        bottom: 60px;
+        right: 10px;
+        
+       
+    }
+
+    .menu li {
+        font-size: small;
+        line-height: 1.5rem; 
+    
+    }
+
+    #main-photo {
+        background-position: center;
+        
+        
+    }
+
+    .logo-small {
+        text-align: center;
+        font-size: small;
+        
+        
+    }
+
+    .under-logo-text {
+        text-align: center;
+        font-size: x-small;
+    }
+
+    #footerblock1 {
+        max-width: 130px;
+    }
+    
+
+    #footerblock2 {
+        font-size: x-small;
+        width: 120px;
+        margin-right: 20px;
+        
+    }
+
+    
+
+    footer {
+        border-top: 1px solid #000000;
+        margin-top: 30px;
+        height: 120px;
+    }
+
+    #address-container {
+        height: 400px;
+        width: 100%;
+    }
+
+    #address-container address {
+        width: 100%;
+        margin: 0 auto;
+        
+    }
+
+    #map {
+        width: 100%;
+        margin: 50px auto;
+    }
+
+
+}
+
 
