chang home photo format from webg to png format for better integration

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ header {
 /* Main photo */
 
 #main-photo {
-    background-image: url('../images/home-photo.webp');
+    background-image: url('../images/home-photo.png');
     width: 100%;
     height: 600px;
     object-fit: fill;
