--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 20px;
+    display: block;
 }
 
 /* Footer */
