--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Mulish:wght@500&display=swap');
 
-
 body {
     font-family: 'Inter', sans-serif;
     font-weight: 100;
     color: #000000;
-    
-} 
+}
 
 .container {
     max-width: 1140px;
@@ -17,10 +15,10 @@ body {
     padding-left: 15px;
     margin-left: auto;
     margin-right: auto;
-    background-color:rgba(54, 185, 245, 0.1);
+    background-color: rgba(54, 185, 245, 0.1);
     border-radius: 20px;
-  }
-  
+}
+
 /* Header */
 
 header {
@@ -37,7 +35,6 @@ header {
     margin: 0;
     position: relative;
     top: 10px;
-
 }
 
 .menu {
@@ -47,9 +44,6 @@ header {
     position: relative;
     bottom: 30px;
     padding-bottom: 0;
-    
-
-    
 }
 
 .menu li {
@@ -59,7 +53,6 @@ header {
     text-transform: uppercase;
     letter-spacing: 1px;
     display: inline;
-      
 }
 
 .active {
@@ -96,8 +89,6 @@ footer {
     position: relative;
     top: 0.5rem;
 }
-    
-
 
 .under-logo-text {
     width: 60%;
@@ -107,7 +98,6 @@ footer {
 
 #footerblock1 {
     float: left;
-
 }
 
 
@@ -115,8 +105,6 @@ footer {
     margin: 20px 0;
     float: right;
     overflow: hidden;
-    
-    
 }
 
 footer {
@@ -127,7 +115,7 @@ footer {
 table {
     width: 250px;
 }
- 
+
 th {
     text-align: left;
 }
@@ -142,7 +130,6 @@ a:link {
 a:visited {
     text-decoration: none;
     color: #000000;
-
 }
 
 a:hover {
@@ -152,7 +139,6 @@ a:hover {
 a:active {
     border-bottom: 1px solid #000000;
 }
-
 
 /* List */
 
@@ -164,14 +150,12 @@ a:active {
 .list-container table {
     border: 1px solid;
     width: 100%;
-    
 }
 
 .list-container td {
     text-align: left;
     width: 50%;
     line-height: 20px;
-    
 }
 
 .list-container th {
@@ -180,29 +164,32 @@ a:active {
 
 /* Contact */
 
- .contact-container { 
+.contact-container {
     position: relative;
     top: 20px;
     padding-bottom: 20px;
     width: 60%;
     margin: auto;
-} 
+}
 
 #contact-header {
     text-align: center;
 }
 
-#fname, #lname, #nationality, #subject {
+#fname,
+#lname,
+#national,
+#subject {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc; 
+    border: 1px solid #ccc;
     border-radius: 4px;
     margin-top: 0.5rem;
     margin-bottom: 1.5rem;
-    resize: vertical 
-  }
+    resize: vertical
+}
 
-  input[type=submit] {
+input[type=submit] {
     background-color: rgba(90, 134, 255, 0.2);
     color: #000000;
     font-weight: 600;
@@ -210,51 +197,54 @@ a:active {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
+}
 
-  #address-container {
-      border-top: 1px solid #000000;
-      margin-top: 20px;
-      height: 300px;
-  }
+#address-container {
+    border-top: 1px solid #000000;
+    margin-top: 20px;
+    height: 300px;
+}
 
-  address {
-      width: 200px;
-      text-align: center;
-      font-style: normal;
-      margin-left: 20px;
-      margin-top: 80px;
-      display: inline-block;
-      border-radius: 25px;
-      background-color:rgba(90, 134, 255, 0.2);
-  }
+address {
+    width: 200px;
+    text-align: center;
+    font-style: normal;
+    margin-left: 20px;
+    margin-top: 80px;
+    display: inline-block;
+    border-radius: 25px;
+    background-color: rgba(90, 134, 255, 0.2);
+}
 
-  address p {
-      line-height: 5px;
-  }
+#address-header {
+    font-weight: 600;
+}
 
-  #map {
-      float: right;
-      margin: 50px 50px 0 0;
-      border: none;
-      width: 300px;
-      height: 200px;
-      overflow: hidden;
-  }
+address p {
+    line-height: 5px;
+}
 
-  /* Media */
+#map {
+    float: right;
+    margin: 50px 50px 0 0;
+    border: none;
+    width: 300px;
+    height: 200px;
+    overflow: hidden;
+}
+
+/* Media */
 
 @media screen and (max-width: 600px) {
 
     .container {
         width: 90%;
-        
     }
 
     header {
         height: 100px;
     }
-    
+
     .logo {
         font-size: x-large;
         text-align: center;
@@ -262,7 +252,6 @@ a:active {
         position: relative;
         top: 20px;
         right: 30px;
-        
     }
 
     .menu {
@@ -271,29 +260,21 @@ a:active {
         position: relative;
         bottom: 60px;
         right: 10px;
-        
-       
     }
 
     .menu li {
         font-size: small;
-        line-height: 1.5rem; 
-    
+        line-height: 1.5rem;
     }
 
     #main-photo {
         background-position: center;
-        
-        
     }
 
     .logo-small {
         text-align: center;
         font-size: x-small;
         width: auto;
-
-        
-        
     }
 
     .under-logo-text {
@@ -307,19 +288,15 @@ a:active {
         padding-right: 5px;
         overflow: hidden;
     }
-    
 
     #footerblock2 {
         font-size: x-small;
         width: 140px;
-        
     }
 
     #footerblock2 th {
         width: 50px;
     }
-
-    
 
     footer {
         border-top: 1px solid #000000;
@@ -335,15 +312,10 @@ a:active {
     #address-container address {
         width: 100%;
         margin: 20px auto;
-        
     }
 
     #map {
         width: 100%;
         margin: 20px auto;
     }
-
-
 }
-
-
